typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck2.ts.stderr
error: unimplemented
expand_export_info(Iterable)
File: $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck2.ts
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck2.ts:2:1
  |
2 | function* g1(): Iterable<string> { }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            48,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck2.ts:2:15
  |
2 | function* g1(): Iterable<string> { }
  |               ^^^^^^^^^^^^^^^^^^

